--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -5,3 +5,19 @@
   background-size: auto
   background-position: center
   background-size: cover
+
+.yt_video_wrapper
+  float: none
+  clear: both
+  width: 100%
+  position: relative
+  padding-bottom: 56.25%
+  padding-top: 25px
+  height: 0
+  iframe
+    position: absolute
+    top: 0
+    left: 0
+    width: 100%
+    height: 100%
+
